<resources>
    <string name="app_name">My Modules</string>
    <string name="c203"> C203 Web App Development</string>
    <string name="c235"> C235 IT Security and Management</string>
    <string name="c218"> C218 UI/UX Design for Applications</string>
    <string name="c206"> C206 Software Development</string>
    <string name="c346"> C346 Android Programming</string>
    <string name="title_activity_mod3">mod3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>