<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mod1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/c203"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/mod2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/c235"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/mod3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/c218"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/mod4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/c206"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/mod5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/c346"
        android:textAlignment="center"
        android:textSize="36sp" />

</LinearLayout>